core-search mvp
