# libs/api-gateway/src/main/kotlin/openBook/api/LibraryApi.kt
@@ -1,0 +1,32 @@
+/**
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech) (7.3.0).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+*/
+package openBook.api
+
+import openBook.model.LibraryDetailsResponse
+import org.springframework.http.HttpStatus
+import org.springframework.http.MediaType
+import org.springframework.http.ResponseEntity
+
+import org.springframework.web.bind.annotation.*
+import org.springframework.web.context.request.NativeWebRequest
+import org.springframework.beans.factory.annotation.Autowired
+
+
+import kotlinx.coroutines.flow.Flow
+import kotlin.collections.List
+import kotlin.collections.Map
+
+@RequestMapping("\${api.base-path:}")
+interface LibraryApi {
+
+
+    @RequestMapping(
+            method = [RequestMethod.GET],
+            value = ["/v1/library/details/{library_id}"],
+            produces = ["application/json"]
+    )
+    suspend fun v1LibraryDetailsLibraryIdGet( @PathVariable("library_id") libraryId: java.util.UUID): ResponseEntity<LibraryDetailsResponse>
+}
