# libs/api-gateway/src/main/kotlin/openBook/model/LibraryDetailsResponse.kt
@@ -1,0 +1,25 @@
+package openBook.model
+
+import java.util.Objects
+import com.fasterxml.jackson.annotation.JsonProperty
+
+/**
+ * 
+ * @param id 
+ * @param name library's name
+ * @param city city library located
+ * @param street 
+ */
+data class LibraryDetailsResponse(
+
+    @get:JsonProperty("id", required = true) val id: java.util.UUID,
+
+    @get:JsonProperty("name", required = true) val name: kotlin.String,
+
+    @get:JsonProperty("city", required = true) val city: kotlin.String,
+
+    @get:JsonProperty("street", required = true) val street: kotlin.String
+) {
+
+}
+
